Write the document description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>jQuery Homework</title>
-    <meta name="description" content="">
+    <meta name="description" content="Using jQuery to write the jQuery ready function, alter HTML content, and change the style of elements">
 
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
